--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,97 @@
 @import "tailwindcss";
 
+@theme {
+  --font-ethnocentric: "Ethnocentric", sans-serif;
+  --font-tt-squares: "TT Squares", sans-serif;
+  --font-sora: "Sora", sans-serif;
+
+  --text-h1: 3.5rem;
+  --text-h1--line-height: 64px;
+  --text-h2: 2.25rem;
+  --text-h2--line-height: 41px;
+  --text-h3: 2rem;
+  --text-h3--line-height: 37px;
+  --text-h4: 1.75rem;
+  --text-h4--line-height: 32px;
+  --text-h5: 1.5rem;
+  --text-h5--line-height: 28px;
+  --text-h6: 1.25rem;
+  --text-h6--line-height: 23px;
+
+  --text-b1: 1.75rem;
+  --text-b1--line-height: 45px;
+  --text-b2: 1.5rem;
+  --text-b2--line-height: 39px;
+  --text-b3: 1.25rem;
+  --text-b3--line-height: 33px;
+  --text-b4: 1rem;
+  --text-b4--line-height: 27px;
+  --text-b5: 0.75rem;
+  --text-b5--line-height: 21px;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: oklch(0.27 0 0);
+
+  --accents-grey-1: oklch(0.69 0 0);
+  --accents-grey-2: oklch(0.51 0 0);
+  --accents-grey-3: oklch(0.4 0 0);
+  --accents-grey-4: oklch(0.34 0 0);
+
+  --accents-retro-1: oklch(0.93 0.0841 87.11);
+  --accents-retro-2: oklch(0.87 0.1429 85.48);
+  --accents-retro-3: oklch(0.8 0.159 81.67);
+  --accents-retro-4: oklch(0.72 0.145 81.12);
+
+  --accents-white-1: oklch(0.97 0 0);
+  --accents-white-2: oklch(0.91 0 0);
+  --accents-white-3: oklch(0.88 0 0);
+  --accents-white-4: oklch(0.82 0 0);
+
+  --accents-yellow-1: oklch(0.96 0.1795 107.31);
+  --accents-yellow-2: oklch(0.92 0.1577 98.67);
+  --accents-yellow-3: oklch(0.88 0.1806 94.02);
+  --accents-yellow-4: oklch(0.76 0.1537 97.8);
+
+  --text-dark-1: oklch(0 0 0);
+  --text-dark-2: oklch(0.27 0 0);
+  --text-light-1: oklch(1 0 0);
+  --text-light-2: oklch(0.86 0 0);
 }
 
 @theme inline {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
+
+  --color-accents-grey-1: var(--accents-grey-1);
+  --color-accents-grey-2: var(--accents-grey-2);
+  --color-accents-grey-3: var(--accents-grey-3);
+  --color-accents-grey-4: var(--accents-grey-4);
+
+  --color-accents-retro-1: var(--accents-retro-1);
+  --color-accents-retro-2: var(--accents-retro-2);
+  --color-accents-retro-3: var(--accents-retro-3);
+  --color-accents-retro-4: var(--accents-retro-4);
+
+  --color-accents-white-1: var(--accents-white-1);
+  --color-accents-white-2: var(--accents-white-2);
+  --color-accents-white-3: var(--accents-white-3);
+  --color-accents-white-4: var(--accents-white-4);
+
+  --color-accents-yellow-1: var(--accents-yellow-1);
+  --color-accents-yellow-2: var(--accents-yellow-2);
+  --color-accents-yellow-3: var(--accents-yellow-3);
+  --color-accents-yellow-4: var(--accents-yellow-4);
+
+  --color-text-dark-1: var(--text-dark-1);
+  --color-text-dark-2: var(--text-dark-2);
+  --color-text-light-1: var(--text-light-1);
+  --color-text-light-2: var(--text-light-2);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Sora", sans-serif;
 }
