--- a/app/globals.css
+++ b/app/globals.css
@@ -52,10 +52,10 @@
   --accents-yellow-3: oklch(0.88 0.1806 94.02);
   --accents-yellow-4: oklch(0.76 0.1537 97.8);
 
-  --text-dark-1: oklch(0 0 0);
-  --text-dark-2: oklch(0.27 0 0);
-  --text-light-1: oklch(1 0 0);
-  --text-light-2: oklch(0.86 0 0);
+  --dark-1: oklch(0 0 0);
+  --dark-2: oklch(0.27 0 0);
+  --light-1: oklch(1 0 0);
+  --light-2: oklch(0.86 0 0);
 
   --radius: 0.625rem;
   --background: oklch(0.27 0 0);
@@ -114,10 +114,10 @@
   --color-accents-yellow-3: var(--accents-yellow-3);
   --color-accents-yellow-4: var(--accents-yellow-4);
 
-  --color-text-dark-1: var(--text-dark-1);
-  --color-text-dark-2: var(--text-dark-2);
-  --color-text-light-1: var(--text-light-1);
-  --color-text-light-2: var(--text-light-2);
+  --color-dark-1: var(--dark-1);
+  --color-dark-2: var(--dark-2);
+  --color-light-1: var(--light-1);
+  --color-light-2: var(--light-2);
 
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -164,6 +164,6 @@ body {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-text-light-1;
+    @apply bg-background text-light-1;
   }
 }
